# ollama-host

./: pyproject.toml
Logger/: logger_app.py
app/: configs.py  main.py  ollama_dao.py
app/Logger/: __init__.py  logger_app.py
