[tool.poetry]
name = "ollama-env"
version = "0.1.0"
description = ""
authors = ["Likhitha <Likhitha.m@skil.ai>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.111.0"}
ollama = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
